--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Saya</title>
+    <title>My CV</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -101,20 +101,108 @@
             <h3 class="section-title">Keterampilan</h3>
             <div class="row">
                 <div class="col-md-6">
-                    <h4>Hard Skill:</h4>
+                    <table class="skill-table">
+                        <thead>
+                            <tr>
+                                <th>Hard Skill</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Java</td>
+                            </tr>
+                            <tr>
+                                <td>Selenium</td>
+                            </tr>
+                            <tr>
+                                <td>Katalon</td>
+                            </tr>
+                            <tr>
+                                <td>PHP</td>
+                            </tr>
+                            <tr>
+                                <td>Laravel</td>
+                            </tr>
+                            <tr>
+                                <td>API Testing</td>
+                            </tr>
+                            <tr>
+                                <td>Automation with Maven Project</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-md-6">
+                    <table class="skill-table">
+                        <thead>
+                            <tr>
+                                <th>Software Skill</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Visual Studio Code</td>
+                            </tr>
+                            <tr>
+                                <td>Katalon Studio</td>
+                            </tr>
+                            <tr>
+                                <td>Postman</td>
+                            </tr>
+                            <tr>
+                                <td>Aqua</td>
+                            </tr>
+                            <tr>
+                                <td>DBeaver</td>
+                            </tr>
+                            <tr>
+                                <td>Jmeter</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+        <!-- Portofolio -->
+        <div class="mb-4">
+            <div class="row">
+                <h3 class="section-title">Portofolio</h3>
+                <div class="col-md-6">
+                    <h4>Project: NexCare</h4>
                     <ul>
-                        <li>HTML, CSS, JavaScript</li>
-                        <li>Bootstrap 5</li>
-                        <li>Git & GitHub</li>
+                        <li><img src="assets/image/care.png" alt="" style="width: 500px;"></li>
                     </ul>
                 </div>
                 <div class="col-md-6">
-                    <h4>Soft Skill:</h4>
+                    <br><br>
+                    <p>Project NexCare adalah sebuah project untuk membantu tim Customer Service dalam menerima laporan dari client atau user.</p>
+                </div>
+            </div>
+            <br><br><br>
+            <div class="row">
+                <div class="col-md-6">
+                    <h4>Project: NexTrac</h4>
                     <ul>
-                        <li>Figma & UI/UX Design</li>
-                        <li>React.js (Dasar)</li>
-                        <li>MySQL</li>
+                        <li><img src="assets/image/trac.png" alt="" style="width: 500px;"></li>
                     </ul>
+                </div>
+                <div class="col-md-6">
+                    <br><br>
+                    <p>Project NexTrac adalah sebuah project untuk membantu client dalam hal pembelian license key dari aplikasi lain yang akan digunakan.</p>
+                </div>
+            </div>
+            <br><br><br>
+            <div class="row">
+                <div class="col-md-6">
+                    <h4>Project: GroBiz</h4>
+                    <ul>
+                        <li><img src="assets/image/biz.png" alt="" style="width: 500px;"></li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <br><br>
+                    <p>Project GroBiz adalah sebuah project untuk membantu client mengiklankan produk-produk mereka atau promo yang sedang berjalan.</p>
                 </div>
             </div>
         </div>
