--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!-- 
+Nama: Andhika Bagaskara Putra Nusantara
+NIM: 240401010283
+Kelas: IF-201
+Mata Kuliah: Pemrograman Web I
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
